@@ -3,6 +3,7 @@ libxfont (1:1.3.3-2) UNRELEASED; urgency=low
   * Wrap build-deps in debian/control.
   * Run autoreconf on build; build-dep on xutils-dev, autoconf, automake and
     libtool.
+  * Handle parallel builds.
 
  -- Julien Cristau <jcristau@debian.org>  Tue, 23 Dec 2008 14:42:17 +0100
 
